--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   "dependencies": {
     "@astrojs/check": "^0.3.1",
     "astro": "^3.5.5",
+    "three": "^0.158.0",
+    "three-js": "^79.0.0",
     "typescript": "^5.3.2"
+  },
+  "devDependencies": {
+    "@types/three": "^0.158.3"
   }
 }
