--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "astro": "^3.5.5",
     "three": "^0.158.0",
     "three-js": "^79.0.0",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/three": "^0.158.3"
