--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.3.1",
     "astro": "^3.5.5",
     "atropos": "^2.0.2",
+    "cursor-effects": "^1.0.12",
     "three": "^0.158.0",
     "three-js": "^79.0.0",
     "typescript": "^5.3.2",
