--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.3.1",
+    "@astrojs/sitemap": "^3.0.3",
     "astro": "^3.5.5",
     "atropos": "^2.0.2",
     "cursor-effects": "^1.0.12",
